         than HTTP Basic. Issue #1040.
       - Jetty client connector duplicates User-Agent header. Issue #1055.
         Reported by Charlie Mason.
       - Fixed Restlet JAX-RS encoding problem when using @FormParam annotation. 
         Issue #1038.
       - Fixed Tomcat shutdown due to TaskService that did not instantiate 
         threads as daemon threads. Issue #1053.

    - Misc
       - Completed the Javadocs for query parameter declarations inside
         HTTP method annotations such as @Get("json?param=val).

    - Enhancements
      -

- 2.3.1 (02/03/2015)
    - Bugs fixed
      - Reintroduced registration by default of the internal HTTP server 
        connectors in JEE edition.
      - FormDataSet not properly serializing text/plain files. Issue #1006.
        Reported by johnjaylward.
      - Fixed fileupload extension for GAE and JEE editions.
      - Fixed potential NPE. Issue #1004.
        Reported by Philippe Perrault.
      - Reference scheme reverts to http when using https. Issue #998.
        Reported by Stephen C. Pope.
      - Fixed bug that prevented client code to properly consume error 
        responses #1004 and #1018.
        Reported by Philippe Perrault and spraguep.

    - Enhancements
      - Added support of JAX-RS extension for the Android edition.
        Contributed by Kiran Rao.

- 2.3.0 (12/17/2014)
    - Bugs fixed
      - Fixed usage of custom Component with ServerServlet (issue #926).
        Reported by Graham Smith.
      - StatusService didn't copy the contactEmail and homeRef property
        to the internal serialized status object.
      - JacksonRepresentation fields are now thread safe.
        Reported by Tim Peierls.
      - Removed XML serialization using Jackson extension from Android edition as 
        it depends on classes not supported by Android SDK (issue #964).
        Reported by Ralph van Etten.
      - Fixed OutputRepresentation in the GAE edition (issue #954).
        Reported by Edouard Mercier.